# sdl2_tic_tac_toe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake_configs/: proj_config.cmake  proj_testing.cmake
inc/sdl2_tic_tac_toe/: computer_player.h  game_board.h  manual_player.h  player_mgr.h  sdl2_renderer.h  sdl2_win.h  tic_tac_toe_const.h
src/: computer_player.c  game_board.c  main.c  manual_player.c  player_mgr.c  sdl2_renderer.c  sdl2_win.c
tests/: CMakeLists.txt
tests/computer_player_ut/: CMakeLists.txt  computer_player_ut.c  main.c
tests/game_board_ut/: CMakeLists.txt  game_board_ut.c  main.c  sdl_mocked.c  sdl_mocked.h
tests/manual_player_ut/: CMakeLists.txt  main.c  manual_player_ut.c
